--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -27,7 +27,7 @@
     <script>
       FHIR.oauth2.authorize({
         'client_id': 'b8c2f33f-5228-410b-aefe-42fc1290fae7',
-        'scope':  'patient/Patient.read patient/Observation.read patient/Person.read patient/Encounter.read launch online_access openid profile'
+        'scope':  'patient.Account patient.Location patient/Patient.read patient/Observation.read patient/Person.read patient/Encounter.read launch online_access openid profile'
       });
     </script>
     <div class="spinner">
