--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -42,6 +42,8 @@
             // should get back the access token and the patient ID
             var accessToken = res.access_token;
             var patientId = res.patient;
+            var idToken = res.id_token;
+            window.alert('id: ' + idToken);
                     
             // and now we can use these to construct standard FHIR
             // REST calls to obtain patient resources with the
