--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -23,6 +23,7 @@
 
     <!-- Prevent session bleed caused by single threaded embedded browser and sessionStorage API -->
     <!-- https://github.com/cerner/fhir-client-cerner-additions -->
+    alert("checkpoint");
     <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
     <script>
       FHIR.oauth2.authorize({
